# openstack-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
k8s/: openstack-rbac.yaml
openstack_assistant/: __init__.py  chat.py  cli.py  config.py  gemini_client.py  granite_client.py  mcp_client.py  spinner.py  tools.py  workflow.py
system_instructions/: rhoso-upgrade-agent-gemini.txt  rhoso-upgrade-agent-granite.txt  rhoso-upgrade-agent.txt
